--- a/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
@@ -11,51 +11,42 @@
             fx:controller="com.tfg.dashboard_tfg.viewmodel.loginViewModel"
             prefHeight="400.0" prefWidth="600.0">
 
-    <children>
-        <VBox spacing="20.0"
-              AnchorPane.bottomAnchor="20.0"
-              AnchorPane.leftAnchor="20.0"
-              AnchorPane.rightAnchor="20.0"
-              AnchorPane.topAnchor="20.0">
-            <children>
-                <Label text="Login"
-                       style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
+    <VBox spacing="20.0"
+          AnchorPane.bottomAnchor="20.0"
+          AnchorPane.leftAnchor="20.0"
+          AnchorPane.rightAnchor="20.0"
+          AnchorPane.topAnchor="20.0">
+        <Label text="Login"
+               style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
 
-                <VBox spacing="15.0"
-                      alignment="CENTER_LEFT"
-                      style="-fx-background-color: white;
-                             -fx-padding: 30px;
-                             -fx-background-radius: 10;"
-                >
-                    <children>
-                        <Label text="Username"
-                               alignment="CENTER_LEFT"/>
-                        <TextField fx:id="usernameField"
-                                   promptText="Enter username"
-                                   prefWidth="300"/>
+        <VBox spacing="15.0"
+              alignment="CENTER_LEFT"
+              style="-fx-background-color: white;
+                     -fx-padding: 30px;
+                     -fx-background-radius: 10;">
+            <Label text="Username"/>
+            <TextField fx:id="usernameField"
+                       promptText="Enter username"
+                       prefWidth="300"/>
 
-                        <Label text="Password"
-                               alignment="CENTER_LEFT"/>
-                        <PasswordField fx:id="passwordField"
-                                       promptText="Enter password"
-                                       prefWidth="300"/>
+            <Label text="Password"/>
+            <PasswordField fx:id="passwordField"
+                           promptText="Enter password"
+                           prefWidth="300"/>
 
-                        <Label fx:id="loginErrorLabel"
-                               textFill="red"
-                               visible="false"/>
+            <Label fx:id="loginErrorLabel"
+                   textFill="red"
+                   visible="false"/>
 
-                        <HBox alignment="CENTER" spacing="10.0">
-                            <Button text="Login"
-                                    onAction="#handleLogin"
-                                    style="-fx-background-color: #28a745;
-                                                                   -fx-text-fill: white;"/>
-                            <Button text="Cancel"
-                                    onAction="#cancelLogin"
-                                    style="-fx-background-color: #dc3545; -fx-text-fill: white;"/>
-                        </HBox>
-                    </children>
-                </VBox>
-            </children>
+            <HBox alignment="CENTER" spacing="10.0">
+                <Button text="Login"
+                        onAction="#handleLogin"
+                        style="-fx-background-color: #28a745;
+                                                       -fx-text-fill: white;"/>
+                <Button text="Cancel"
+                        onAction="#cancelLogin"
+                        style="-fx-background-color: #dc3545; -fx-text-fill: white;"/>
+            </HBox>
         </VBox>
-    </children>
+    </VBox>
 </AnchorPane>
