added comment in MainView.fxml

--- a/src/main/resources/com/tfg/dashboard_tfg/MainView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/MainView.fxml
@@ -156,7 +156,7 @@
 
         <center>
             <StackPane fx:id="mainStackPane">
-
+            <!-- inject Views-->
             </StackPane>
         </center>
     </BorderPane>
