--- a/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
@@ -16,7 +16,8 @@
           AnchorPane.bottomAnchor="20.0"
           AnchorPane.leftAnchor="20.0"
           AnchorPane.rightAnchor="20.0"
-          AnchorPane.topAnchor="20.0">
+          AnchorPane.topAnchor="20.0"
+          style="-fx-padding: 20 40 0 40;">
         <Label text="Dashboard"
                style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #2e2e42;">
         </Label>
