--- a/src/main/resources/com/tfg/dashboard_tfg/view/jellyFinView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/jellyFinView.fxml
@@ -15,7 +15,8 @@
           AnchorPane.bottomAnchor="20.0"
           AnchorPane.leftAnchor="20.0"
           AnchorPane.rightAnchor="20.0"
-          AnchorPane.topAnchor="20.0">
+          AnchorPane.topAnchor="20.0"
+          style="-fx-padding: 20 40 0 40;">
         <Label text="Jellyfin"
                style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #2e2e42;"/>
     </VBox>
