--- a/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
@@ -16,15 +16,18 @@
           AnchorPane.leftAnchor="20.0"
           AnchorPane.rightAnchor="20.0"
           AnchorPane.topAnchor="20.0"
-          style="-fx-padding: 20 40 0 40;">
+          style="-fx-border-width: 1;
+                 -fx-padding: 20 40 0 40;"
+          styleClass="view">
+
         <Label text="Login"
                style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
 
         <VBox spacing="15.0"
               alignment="CENTER_LEFT"
-              style="-fx-background-color: white;
-                     -fx-padding: 30px;
-                     -fx-background-radius: 10;">
+              style="-fx-padding: 30px;
+                     -fx-background-radius: 10;"
+              styleClass="login-box">
             <Label text="Username"/>
             <TextField fx:id="usernameField"
                        promptText="Enter username"
