--- a/src/main/resources/com/tfg/dashboard_tfg/styles/styles.css
+++ b/src/main/resources/com/tfg/dashboard_tfg/styles/styles.css
@@ -1,40 +1,62 @@
 /* styles.css */
-
-/* Dark Theme - default */
+.root {
+    -fx-transition-duration: 500ms; /* 0.5 seconds transition */
+}
+/* terminal theme - catppuccin-macchiato dark theme*/
 .dark-theme {
+    -terminal-black: #494d64;
+    -terminal-red: #ed8796;
+    -terminal-green: #a6da95;
+    -terminal-yellow: #eed49f;
+    -terminal-blue: #8aadf4;
+    -terminal-purple: #f5bde6;
+    -terminal-cyan: #8bd5ca;
+    -terminal-white: #b8c0e0;
+    -terminal-brightBlack: #5b6078;
+    -terminal-brightRed: #ed8796;
+    -terminal-brightGreen: #a6da95;
+    -terminal-brightYellow: #eed49f;
+    -terminal-brightBlue: #8aadf4;
+    -terminal-brightPurple: #f5bde6;
+    -terminal-brightCyan: #8bd5ca;
+    -terminal-brightWhite: #a5adcb;
+    -terminal-background: #24273a;
+    -terminal-foreground: #cad3f5;
+    -terminal-selectionBackground: #5b6078;
+    -terminal-cursorColor: #f4dbd6;
+
     -fx-background: #191924;
     -fx-control-inner-background: #2e2e42;
-    -fx-text-fill:#CDD6F4;
+    -fx-text-fill: #CDD6F4;
     -fx-text-base-color: #CDD6F4;
     -fx-accent: #7c78dc;
     -fx-focus-color: #7c78dc;
     -fx-faint-focus-color: #7c78dc22;
 }
 
-.dark-theme .view-box{
-    -fx-background-color: #303042;
-}
-.dark-theme .ikonli-font-icon {
-    -fx-icon-color: #fafafa;
-}
-.dark-theme .title{
-    -fx-text-fill:  #CDD6F4;
-}
-.dark-theme .view-box .view{
-    -fx-border-radius: 3;
-    -fx-border-color: #484b6a;
-}
-.dark-theme .dashboard-container{
-    -fx-background-color: #3e3e42;
-}
-.dark-theme .toggle{
-    -fx-background-color: #fafafa;
-}
-.dark-theme .login-box{
-    -fx-background-color: #28283C;
-}
-/* Light Theme */
+/* terminal theme - catppuccin-latte light theme*/
 .light-theme {
+    -terminal-black: #5c5f77;
+    -terminal-red: #d20f39;
+    -terminal-green: #40a02b;
+    -terminal-yellow: #df8e1d;
+    -terminal-blue: #1e66f5;
+    -terminal-purple: #ea76cb;
+    -terminal-cyan: #179299;
+    -terminal-white: #acb0be;
+    -terminal-brightBlack: #6c6f85;
+    -terminal-brightRed: #d20f39;
+    -terminal-brightGreen: #40a02b;
+    -terminal-brightYellow: #df8e1d;
+    -terminal-brightBlue: #1e66f5;
+    -terminal-brightPurple: #ea76cb;
+    -terminal-brightCyan: #179299;
+    -terminal-brightWhite: #bcc0cc;
+    -terminal-background: #eff1f5;
+    -terminal-foreground: #4c4f69;
+    -terminal-selectionBackground: #acb0be;
+    -terminal-cursorColor: #dc8a78;
+
     -fx-background: #fafafa;
     -fx-control-inner-background: white;
     -fx-text-fill: #333333;
@@ -44,54 +66,165 @@
     -fx-faint-focus-color: #7c78dc22;
 }
 
-.light-theme .view-box{
+/* Dark Theme UI Components */
+.dark-theme .view-box {
+    -fx-background-color: #303042;
+}
+
+.dark-theme .ikonli-font-icon {
+    -fx-icon-color: #fafafa;
+}
+
+.dark-theme .title {
+    -fx-text-fill: #CDD6F4;
+}
+
+.dark-theme .view-box .view {
+    -fx-border-radius: 3;
+    -fx-border-color: #484b6a;
+}
+
+.dark-theme .dashboard-container {
+    -fx-background-color: #383847;
+}
+
+.dark-theme .toggle {
+    -fx-background-color: #fafafa;
+}
+
+.dark-theme .login-box {
+    -fx-background-color: #28283C;
+}
+
+/* Dark Theme Console */
+.dark-theme .console-button {
+    -fx-text-fill: -terminal-black;
+    -fx-font-weight: bold;
+    -fx-background-color: -terminal-blue;
+}
+
+.dark-theme .command-prompt {
+    -fx-text-fill: -terminal-foreground;
+}
+
+.dark-theme .input-prompt {
+    -fx-prompt-text-fill: -terminal-brightWhite;
+    -fx-text-fill: -terminal-brightWhite;
+    -fx-font-weight: bold;
+}
+
+.dark-theme .history-box {
+    -fx-background-color: -terminal-brightWhite;
+    -fx-text-fill: -terminal-black;
+    -fx-font-weight: bold;
+}
+
+.dark-theme .combo-box .list-view .list-cell:focused {
+    -fx-background-color: -terminal-white;
+    -fx-text-fill: -terminal-black;
+}
+
+.dark-theme .combo-box .list-view .list-cell:hover {
+    -fx-background-color: #5F9EA0;
+    -fx-text-fill: white;
+}
+
+.dark-theme .status-label {
+    -fx-text-fill: -terminal-green;
+}
+
+/* Light Theme UI Components */
+.light-theme .view-box {
     -fx-background-color: #e4e5f0;
 }
+
 .light-theme .ikonli-font-icon {
     -fx-icon-color: #252526;
 }
-.light-theme .title{
-    -fx-text-fill:  #484b6a;
+
+.light-theme .title {
+    -fx-text-fill: #484b6a;
 }
-.light-theme .view-box .view{
+
+.light-theme .view-box .view {
     -fx-border-radius: 3;
     -fx-border-color: #d2d3db;
 }
-.light-theme .dashboard-container{
+
+.light-theme .dashboard-container {
     -fx-background-color: #f0f1fc;
 }
-.light-theme .toggle{
+
+.light-theme .toggle {
     -fx-background-color: #6C6E87;
 }
-.light-theme .tiles{
+
+.light-theme .tiles {
     -fx-background-color: white;
 }
-.light-theme .login-box{
+
+.light-theme .login-box {
     -fx-background-color: #fafafa;
 }
-/* docker view old css */
-/*
 
-style="-fx-background-color: #45475A; -fx-text-fill: #CDD6F4; -fx-background-radius: 4;"
-style="-fx-background-color: #45475A; -fx-mark-color: #CDD6F4; -fx-background-radius: 4;"
-style="-fx-font-size: 14px; -fx-text-fill: #CDD6F4;"
-style="-fx-font-size: 14px; -fx-text-fill: #A6E3A1;"
-style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: #F5C2E7;"
-style="-fx-background-color: #1E1E2E;"
+/* Light Theme Console */
+.light-theme .console-button {
+    -fx-text-fill: -terminal-background;
+    -fx-font-weight: bold;
+    -fx-background-color: -terminal-blue;
+}
 
-style="-fx-border-color: #313244;
+.light-theme .command-prompt {
+    -fx-text-fill: -terminal-foreground;
+}
+
+.light-theme .input-prompt {
+    -fx-prompt-text-fill: -terminal-brightBlack;
+    -fx-text-fill: -terminal-foreground;
+    -fx-font-weight: bold;
+}
+
+.light-theme .history-box {
+    -fx-background-color: -terminal-brightWhite;
+    -fx-text-fill: -terminal-black;
+    -fx-font-weight: bold;
+}
+
+.light-theme .combo-box .list-view .list-cell:focused {
+    -fx-background-color: -terminal-selectionBackground;
+    -fx-text-fill: -terminal-foreground;
+}
+
+.light-theme .combo-box .list-view .list-cell:hover {
+    -fx-background-color: -terminal-blue;
+    -fx-text-fill: -terminal-background;
+}
+
+.light-theme .status-label {
+    -fx-text-fill: -terminal-green;
+}
+
+/* Reference for docker view old CSS
+style=-fx-background-color: #45475A; -fx-text-fill: #CDD6F4; -fx-background-radius: 4;
+style=-fx-background-color: #45475A; -fx-mark-color: #CDD6F4; -fx-background-radius: 4;
+style=-fx-font-size: 14px; -fx-text-fill: #CDD6F4;
+style=-fx-font-size: 14px; -fx-text-fill: #A6E3A1;
+style=-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: #F5C2E7;
+style=-fx-background-color: #1E1E2E;
+
+style=-fx-border-color: #313244;
                  -fx-border-width: 1;
-                 -fx-padding: 20 40 0 40;"
+                 -fx-padding: 20 40 0 40;
 
-style="-fx-font-family: 'JetBrains Mono', 'Fira Code', 'Consolas', monospace;
+style=-fx-font-family: 'JetBrains Mono'; 'Fira Code'; 'Consolas'; monospace;
                          -fx-control-inner-background: #11111B;
                          -fx-text-fill: #A6E3A1;
                          -fx-background-radius: 8;
                          -fx-border-radius: 8;
                          -fx-border-color: #313244;
                          -fx-border-width: 1;
-                         -fx-padding: 10;"
-style="-fx-font-family: 'JetBrains Mono', 'Fira Code', 'Consolas', monospace;
+                         -fx-padding: 10;
+style=-fx-font-family: 'JetBrains Mono'; 'Fira Code'; 'Consolas'; monospace;
                           -fx-background-color: #313244;
                           -fx-text-fill: #CDD6F4;
                           -fx-prompt-text-fill: #7F849C;
@@ -99,18 +232,14 @@ style="-fx-font-family: 'JetBrains Mono', 'Fira Code', 'Consolas', monospace;
                           -fx-border-radius: 4;
                           -fx-border-color: #45475A;
                           -fx-border-width: 1;
-                          -fx-padding: 5 10 5 10;"
-style="-fx-background-color: #89B4FA;
+                          -fx-padding: 5 10 5 10;
+style=-fx-background-color: #89B4FA;
                           -fx-text-fill: #11111B;
                           -fx-font-weight: bold;
                           -fx-background-radius: 4;
                           -fx-border-radius: 4;
-                          -fx-cursor: hand;"
-style="-fx-background-color: #313244;
+                          -fx-cursor: hand;
+style=-fx-background-color: #313244;
                             -fx-text-fill: #CDD6F4;
-                            -fx-background-radius: 4;"
-                         */
-
-
-/* good looking color*/
-/* mediumseagreen */
+                            -fx-background-radius: 4;
+*/
