fixed stage bar

--- a/src/main/resources/com/tfg/dashboard_tfg/MainView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/MainView.fxml
@@ -11,7 +11,8 @@
             fx:controller="com.tfg.dashboard_tfg.viewmodel.Controller">
 
     <HBox fx:id="customBar" alignment="CENTER_RIGHT" prefHeight="30.0" maxWidth="Infinity"
-          style="-fx-background-color: transparent; -fx-padding: 0 0 0 0;">
+          style="-fx-background-color: transparent; -fx-padding: 0 0 0 0;" AnchorPane.leftAnchor="0.0"
+          AnchorPane.rightAnchor="0.0">
         <Button fx:id="minimizeButton" onAction="#handleClose" prefHeight="30" prefWidth="40"
                 style="-fx-background-color: transparent; -fx-padding: 7 0 0 0;">
             <graphic>
