modify DashboardController.java that use data from monitoring api

--- a/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
@@ -110,7 +110,7 @@
                           animated="true"
                           skinType="BAR_GAUGE"
                           value="20"
-                          unit="GB"
+                          unit="\%"
                           onMouseClicked="#onclicktile"
                     />
 
