--- a/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.tfg.dashboard_tfg.viewmodel.loginViewModel"
+            fx:controller="com.tfg.dashboard_tfg.viewmodel.LoginViewModel"
             prefHeight="400.0" prefWidth="600.0">
 
     <VBox spacing="20.0"
