--- a/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
@@ -6,51 +6,104 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.scene.text.Font?>
+<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.tfg.dashboard_tfg.viewmodel.LoginViewModel"
             prefHeight="400.0" prefWidth="600.0">
-
-    <VBox spacing="20.0"
-          AnchorPane.bottomAnchor="20.0"
-          AnchorPane.leftAnchor="20.0"
-          AnchorPane.rightAnchor="20.0"
-          AnchorPane.topAnchor="20.0"
-          style="-fx-border-width: 1;
-                 -fx-padding: 20 40 0 40;"
-          styleClass="view">
-
-        <Label text="Login"
-               style="-fx-font-size: 28px; -fx-font-weight: bold;"/>
-
-        <VBox spacing="15.0"
-              alignment="CENTER_LEFT"
-              style="-fx-padding: 30px;
-                     -fx-background-radius: 10;"
-              styleClass="login-box">
-            <Label text="Username"/>
-            <TextField fx:id="usernameField"
-                       promptText="Enter username"
-                       prefWidth="300"/>
-
-            <Label text="Password"/>
-            <PasswordField fx:id="passwordField"
-                           promptText="Enter password"
-                           prefWidth="300"/>
-
-            <Label fx:id="loginErrorLabel"
-                   textFill="red"
-                   visible="false"/>
-
-            <HBox alignment="CENTER" spacing="10.0">
-                <Button text="Login"
-                        onAction="#handleLogin"
-                        style="-fx-background-color: #28a745;
-                                                       -fx-text-fill: white;"/>
-                <Button text="Cancel"
-                        onAction="#cancelLogin"
+    <VBox alignment="CENTER" layoutX="250.0" layoutY="100.0" prefHeight="400.0" prefWidth="300.0" spacing="10.0"
+          styleClass="login-container" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0"
+          AnchorPane.topAnchor="100.0">
+        <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        </padding>
+        <FontIcon iconColor="#5e72e4" iconLiteral="fas-user-circle" iconSize="64"/>
+        <Label styleClass="login-header" text="User Login">
+            <font>
+                <Font name="System Bold" size="24.0"/>
+            </font>
+        </Label>
+        <VBox fx:id="loginFormContainer" alignment="CENTER" spacing="15.0">
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+            <TextField fx:id="usernameField" promptText="Username" styleClass="login-prompt">
+                <VBox.margin>
+                    <Insets left="20.0" right="20.0"/>
+                </VBox.margin>
+            </TextField>
+            <PasswordField fx:id="passwordField" promptText="Password" styleClass="login-prompt">
+                <VBox.margin>
+                    <Insets left="20.0" right="20.0"/>
+                </VBox.margin>
+            </PasswordField>
+            <Label fx:id="loginErrorLabel" styleClass="error-label" text="Invalid username or password"
+                   textFill="RED" visible="false">
+                <VBox.margin>
+                    <Insets/>
+                </VBox.margin>
+            </Label>
+            <HBox alignment="CENTER" spacing="20.0">
+                <Button fx:id="loginButton" defaultButton="true" mnemonicParsing="false"
+                        onAction="#handleLogin" prefWidth="100.0" styleClass="login-button" text="Login"
+                        style="-fx-background-color: #28a745; -fx-text-fill: white;"/>
+                <Button fx:id="cancelButton" cancelButton="true" mnemonicParsing="false"
+                        onAction="#cancelLogin" prefWidth="100.0" styleClass="cancel-button" text="Cancel"
                         style="-fx-background-color: #dc3545; -fx-text-fill: white;"/>
             </HBox>
+            <ProgressIndicator fx:id="loginProgress" prefHeight="25.0" prefWidth="25.0" visible="false"/>
         </VBox>
     </VBox>
 </AnchorPane>
+
+<!--old work version-->
+<!--<AnchorPane xmlns="http://javafx.com/javafx"-->
+<!--            xmlns:fx="http://javafx.com/fxml"-->
+<!--            fx:controller="com.tfg.dashboard_tfg.viewmodel.LoginViewModel"-->
+<!--            prefHeight="400.0" prefWidth="600.0">-->
+
+<!--    <VBox spacing="20.0"-->
+<!--          AnchorPane.bottomAnchor="20.0"-->
+<!--          AnchorPane.leftAnchor="20.0"-->
+<!--          AnchorPane.rightAnchor="20.0"-->
+<!--          AnchorPane.topAnchor="20.0"-->
+<!--          style="-fx-border-width: 1;-->
+<!--                 -fx-padding: 20 40 0 40;"-->
+<!--          styleClass="view">-->
+
+<!--        <Label text="Login"-->
+<!--               style="-fx-font-size: 28px; -fx-font-weight: bold;"/>-->
+
+<!--        <VBox spacing="15.0"-->
+<!--              alignment="CENTER_LEFT"-->
+<!--              style="-fx-padding: 30px;-->
+<!--                     -fx-background-radius: 10;"-->
+<!--              styleClass="login-box">-->
+<!--            <Label text="Username"/>-->
+<!--            <TextField fx:id="usernameField"-->
+<!--                       promptText="Enter username"-->
+<!--                       prefWidth="300"/>-->
+
+<!--            <Label text="Password"/>-->
+<!--            <PasswordField fx:id="passwordField"-->
+<!--                           promptText="Enter password"-->
+<!--                           prefWidth="300"/>-->
+
+<!--            <Label fx:id="loginErrorLabel"-->
+<!--                   textFill="red"-->
+<!--                   visible="false"/>-->
+
+<!--            <HBox alignment="CENTER" spacing="10.0">-->
+<!--                <Button text="Login"-->
+<!--                        onAction="#handleLogin"-->
+<!--                        style="-fx-background-color: #28a745;-->
+<!--                                                       -fx-text-fill: white;"/>-->
+<!--                <Button text="Cancel"-->
+<!--                        onAction="#cancelLogin"-->
+<!--                        style="-fx-background-color: #dc3545; -fx-text-fill: white;"/>-->
+<!--            </HBox>-->
+<!--        </VBox>-->
+<!--    </VBox>-->
+<!--</AnchorPane>-->
