--- a/src/main/resources/com/tfg/dashboard_tfg/view/RegisterView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/RegisterView.fxml
@@ -68,7 +68,12 @@
                         onAction="#backToLogin" prefWidth="120.0" styleClass="back-button" text="Back to Login"/>
             </HBox>
             <ProgressIndicator fx:id="registerProgress" prefHeight="25.0" prefWidth="25.0" visible="false"/>
-            <Hyperlink fx:id="loginLink" onAction="#backToLogin" text="Already have an account? Login here" />
+
+            <HBox alignment="CENTER" spacing="10.0">
+                <Label text="Already have an account?" />
+                <Hyperlink fx:id="loginLink" onAction="#backToLogin" text="Login" />
+            </HBox>
+
         </VBox>
     </VBox>
 </AnchorPane>
