--- a/src/main/resources/com/tfg/dashboard_tfg/view/RegisterView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/RegisterView.fxml
@@ -30,42 +30,44 @@
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
             </padding>
-            <TextField fx:id="fullNameField" promptText="Full Name">
+            <TextField fx:id="fullNameField" promptText="Full Name" styleClass="login-prompt">
                 <VBox.margin>
                     <Insets left="20.0" right="20.0"/>
                 </VBox.margin>
             </TextField>
-            <TextField fx:id="emailField" promptText="Email Address">
+            <TextField fx:id="emailField" promptText="Email Address" styleClass="login-prompt">
                 <VBox.margin>
                     <Insets left="20.0" right="20.0"/>
                 </VBox.margin>
             </TextField>
-            <TextField fx:id="usernameField" promptText="Username">
+            <TextField fx:id="usernameField" promptText="Username" styleClass="login-prompt">
                 <VBox.margin>
                     <Insets left="20.0" right="20.0"/>
                 </VBox.margin>
             </TextField>
-            <PasswordField fx:id="passwordField" promptText="Password">
+            <PasswordField fx:id="passwordField" promptText="Password" styleClass="login-prompt">
                 <VBox.margin>
                     <Insets left="20.0" right="20.0"/>
                 </VBox.margin>
             </PasswordField>
-            <PasswordField fx:id="confirmPasswordField" promptText="Confirm Password">
+            <PasswordField fx:id="confirmPasswordField" promptText="Confirm Password" styleClass="login-prompt">
                 <VBox.margin>
                     <Insets left="20.0" right="20.0"/>
                 </VBox.margin>
             </PasswordField>
             <Label fx:id="registerErrorLabel" styleClass="error-label" text="Error message"
-                   textFill="RED" visible="false">
+                   textFill="#dc3545" visible="false">
                 <VBox.margin>
                     <Insets/>
                 </VBox.margin>
             </Label>
             <HBox alignment="CENTER" spacing="20.0">
                 <Button fx:id="registerButton" defaultButton="true" mnemonicParsing="false"
-                        onAction="#handleRegister" prefWidth="120.0" styleClass="register-button" text="Register"/>
-                <Button fx:id="backToLoginButton" cancelButton="true" mnemonicParsing="false"
-                        onAction="#backToLogin" prefWidth="120.0" styleClass="back-button" text="Back to Login"/>
+                        onAction="#handleRegister" prefWidth="120.0" styleClass="register-button" text="Register"
+                        style="-fx-background-color: #28a745; -fx-text-fill: white;"/>
+<!--                <Button fx:id="backToLoginButton" cancelButton="true" mnemonicParsing="false"-->
+<!--                        onAction="#backToLogin" prefWidth="120.0" styleClass="back-button" text="Back to Login"-->
+<!--                        style="-fx-background-color: #dc3545; -fx-text-fill: white;"/>-->
             </HBox>
             <ProgressIndicator fx:id="registerProgress" prefHeight="25.0" prefWidth="25.0" visible="false"/>
 
