modify dashboard tile unit

--- a/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
@@ -77,7 +77,7 @@
                           textSize="BIGGER"
                           animated="true"
                           skinType="SMOOTH_AREA_CHART"
-                          unit="Mbps"
+                          unit="Kbps"
                           alert="true"
                           alarmColor="red"
                           threshold="20"
